dhall/tests/type-inference/failure/unit/FunctionTypeArgumentTypeNotAType.txt
Type error: error: Expected a type, found: `2`
 --> <current file>:1:0
  |
1 | 2 → _
  | ^ this has type: `Natural`
  |
  = help: An expression in type position must have type `Type`, `Kind` or `Sort`
